--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="about-us.html" class="nav-button">About Us</a>
             <a href="contacts.html" class="nav-button">Contacts and location</a>
             <div class="logo">
-                <img src="logo.jpg" width="100" height="100" alt="logo">
+                <img src="logoo.png" width="100" height="100" alt="logo">
             </div>
             <div class="icon-container">
                 <!-- WhatsApp Icon -->
